# cim-start

./: .env  .envrc  .gitignore  Cargo.toml  Flake.md  LICENSE  Using_this_template.md  architecture.md  build-cim.md  cim.md  devcontainer.json  domain.yaml  flake.nix  justfile  license  readme.md  rust-toolchain.toml  techstack.md
compute/: cim-anywhere.nix  cimdomain.nix  deploy.sh  network.nix  readme.md
compute/dev/: configuration.nix  default.nix  flake.nix  gnome.nix  readme.md  run.sh  (+4 more)
doc/: CIM - The Composable Information Machine.md  Communications.md  Configuration.md  Domain.md  Flake.md  Inventory.md  UbiquitousLanguage.md  Using_this_template.md  a-devcontainer.md  architecture.md  build-cim.md  cim-and-nixos.md  cim.md  comms.md  domain.md  git.md  messaging.md  oci+wasm.md  ontology.nix  reactive.md  readme-cim.md  readme.md  structuring-nix.md  techstack.md
domain/: core.nix  default.nix  domain.md  domain.yml  readme.md
example/: agents.json  domain.json  organization.json  people.json
gateway/: compilng.md  readme.md
hosts/: configuration.nix  flake.nix  readme.md
iso/: build.sh  iso.nix
modules/: buildimage.nix  default.nix  devshell.nix  nixos-container.nix  rust.nix
nixos/: configuration.nix
oci/: NOT DONE  dev.nix  flake.nix  justfile  prod.nix
ollama/: build.sh  configuration.nix  flake.nix
src/: app.rs  build.sh  configuration.nix  lib.rs  main.rs  result
style/: main.scss
vhost-dev/: configuration.nix  gnome.nix  hardware-configuration.nix  multi-network.nix  programs.nix  rebuild.sh  services.nix
vhosts/: readme.md
(+157 files in other folders)
