[package]
name = "cim"
version = "0.1.0"
authors = ["Steele Price <steele@thecowboy.ai>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.13", features = ["debug", "tokio"] }
tokio = { version = "1.42.0", features = ["time"] }
warp = "0.3"
async-tungstenite = { version = "0.28.2", features = [
  "tokio-rustls-webpki-roots",
] }
